chore: update marked to 0.3.9 for security fix

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Write markdown, serve as html, query via GraphQL.🔥",
   "author": "OK GROW! <hello@okgrow.com> (https://www.okgrow.com)",
   "homepage": "https://github.com/okgrow/guides",
-  "keywords": ["graphql", "markdown", "html"],
+  "keywords": [
+    "graphql",
+    "markdown",
+    "html"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/okgrow/guides.git"
@@ -29,7 +33,7 @@
     "glob": "^7.1.2",
     "gray-matter": "^3.0.3",
     "lodash.clonedeep": "^4.5.0",
-    "marked": "^0.3.6",
+    "marked": "^0.3.9",
     "nedb": "^1.8.0"
   },
   "peerDependencies": {
@@ -69,5 +73,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
